src/objects/Process__c.object
<CustomObject>
    <description>matching Process table in LZData</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From bDeployed field in Process table of LZData database</description>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <description>From iProcess field in pkProcess table of LZData database</description>
        <externalId>true</externalId>
        <label>Process ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>Active__c</columns>
        <columns>Deployed__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>Active__c</columns>
        <columns>Deployed__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>